--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -15,7 +15,7 @@ jobs:
       github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
-      - uses: ryohidaka/wxt-submit@v1.0.0
+      - uses: ryohidaka/action-wxt-submit@v1.1.1
         with:
           # For Chrome Extension
           chrome: false
