--- a/.github/workflows/template-cleanup.yml
+++ b/.github/workflows/template-cleanup.yml
@@ -25,6 +25,6 @@ jobs:
         uses: ryohidaka/nodejs-cleanup@v1.1.3
         with:
           description: ""
-          excluded: "CHANGELOG, .github/workflows/template-cleanup.yml"
+          excluded: "CHANGELOG.md, .github/workflows/template-cleanup.yml"
           template-dir: ".github/template"
           remove-template-dir: true
