--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,12 +19,19 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+
       - name: Install pnpm
         run: npm install -g pnpm
-      - run: pnpm i
-      - run: pnpm build
+
+      - name: Install dependencies
+        run: pnpm i
+
+      - name: Run build
+        run: pnpm build
